--- a/style.css
+++ b/style.css
@@ -1,20 +1,71 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;500;700&family=Roboto:wght@300;500;700&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  :root {
+    --main-bg-color: #23272a;
+    --secondary-bg-color: #2c2f33;
+    --white: #f1ede9;
+    --pink: #FF0099;
+    --blue: #00ffff;
+    --gray-ultimate: #373948;
+
+    --headings-font-family: "Raleway", sans-serif;
+    --secondary-font-family: "Roboto", sans-serif;
+   
+  }
+
 body{
-    background-color: rgb(247, 238, 205);
+    background-color: var(--main-bg-color);
+    font-family: var(--secondary-font-family);
+    color: var(--white);
+    width: 100%;
+    font-size: 16px;
 }
 
+.main {
+    width: 70%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 30px auto;
+  }
+
+  .header {
+    padding: 20px;
+  }
+
+  h1 {
+    color: var(--pink);
+    text-align: center;
+    font-size: 2em;
+    font-family: var(--headings-font-family);
+  }
+
+  h3 {
+    color: var(--blue);
+    font-size: 1.3em;
+    letter-spacing: 2px;
+    padding-top: 15px;
+    font-family: var(--headings-font-family);
+  }
 
 .flex-container {
     display: flex;
     justify-content: center;
-    
+    align-items: center;
    
 }
 
-
-
 .flex-container > div {
-    background-color: #f1f1f1;
+    background-color:  var(--white);
     margin: 1px;
     padding: 1px;
     font-size: 30px;
@@ -22,24 +73,45 @@ body{
     height: 60px;
 }
 
-#time{
-    margin: 1px;
-    padding: 15px;
-    text-align: center;
-    font-size: 30px;
-    width: 5px;
-    height: 5px;
+
+button{
+    border-radius: 5px;
+    display: inline-block;
+    border: 1px solid #91858c;
+    margin: 4px;
+    padding: 7px 12px;
+    color: var(--gray-ultimate);
+    font-size: 1em;
+    font-family: var(--headings-font-family);
+    font-weight: 500;
+}
+
+
+button:hover {
+    background-color: var(--pink);
+    color: var(--white);
+  }
+
+  .buttons {
+    padding-top: 20px;
+  }
+
+.time,
+.show{
+    color: var(--white);
+    font-family: var(--secondary-font-family);
+    font-size: 1.7em;
+    padding: 20px;
     
 
 }
 
-button{
-    border-radius: 12px;
-    display: inline-block;
-    border: 2px solid #91858c0a;
-    margin: 4px 2px;
-    padding: 5px;
-}
+
+.new:hover {
+    background-color: var(--blue);
+    color: var(--pink);
+  }
+
 
 
 
@@ -47,14 +119,15 @@ button{
 @media screen and (max-width : 768px)
 {
     body{
-        background-color: lavender;
+        background-color: var(--secondary-bg-color);
+        color: var(--white);
     }
 }
 
 /* On screens that are 600px wide or less, the background color is olive */
-@media screen and (max-width:500px){
+@media screen and (max-width:360px){
     body{
-        background-color: lightcoral;
+        background-color: var(--gray-ultimate);
     }
     
 }
@@ -70,9 +143,9 @@ button{
 }
 
 #xo{
-    width: 186px;
+    width: 330px;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
 
 }
-
