--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body{
     font-size: 30px;
     width: 60px;
     height: 60px;
+    align-items: center;
 }
 
 
@@ -148,7 +149,7 @@ button:hover {
 }
 
 #xo{
-    width: 330px;
+    width:200px;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
